# CRUD_HTMXRust

./: .gitignore  Cargo.toml  README.md
backend/Auth/proto/: hello.proto
backend/Auth/src/: client.rs
backend/Event/: Cargo.toml
backend/Gateway/: .env  Dockerfile  docker-compose.yaml
backend/Gateway/src/: main.rs
backend/Task/: Cargo.toml
backend/Task/src/: server.rs
backend/gateway/: Cargo.toml
backend/gateway/src/routes/: ping.rs
backend/gateway/src/schemas/: schema.rs
src/: app.rs  main.rs
src/view/: 404.rs  home.rs  views.rs
