[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[dependencies]
prost = "0.12.1"
tokio = { version = "1.24.2", features = ["full"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
